# base

./: .gitignore  CHALLENGES.md  HOOKS.md  LICENSE  README.md  RENAME.md  SETUP.md  SETUP_STEPS.md  commitlint.config.cjs  package-lock.json  package.json  pyproject.toml
env/: .env.dev  .env.prod  .env.qa
scripts/: activate.sh  lint-staged-ruff.sh  patch_venv_activate.sh  rename_project.sh
src/: app.py  core.py  load_env.py  main.py
