[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "base"
version = "0.1.0"
description = "Reusable Python project skeleton with env loading, logging, and dev watch mode."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Base" }]
keywords = ["python", "cli", "skeleton"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["watchdog>=3.0"]

[project.scripts]
base = "main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["main", "load_env", "core", "app"]
